--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "postcss": "^8",
