--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.1.0",
     "next": "15.1.2",
     "next-intl": "^3.26.3",
+    "puppeteer": "^24.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
