--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "postcss": "^8",
