--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "puppeteer": "^24.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
     "react-use": "^17.6.0",
     "recharts": "^2.15.0",
     "sharp": "^0.33.5",
+    "slick-carousel": "^1.8.1",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
