--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "firebase": "^11.1.0",
+    "googleapis": "^144.0.0",
     "next": "15.1.2",
     "next-intl": "^3.26.3",
     "puppeteer": "^24.1.0",
