--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "googleapis": "^144.0.0",
     "next": "15.1.2",
     "next-intl": "^3.26.3",
     "puppeteer": "^24.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fittext": "^1.0.0",
+    "react-fitty": "^1.0.1",
+    "react-measure": "^2.5.2",
     "react-slick": "^0.30.3",
+    "react-textfit": "^1.1.1",
     "react-use": "^17.6.0",
     "recharts": "^2.15.0",
     "sharp": "^0.33.5",
