--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^144.0.0",
     "next": "15.1.2",
     "next-intl": "^3.26.3",
+    "papaparse": "^5.5.2",
     "puppeteer": "^24.1.0",
     "puppeteer-core": "^24.1.1",
     "react": "^19.0.0",
