--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "twitter-api-v2": "^1.19.0",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "vercel": "^41.0.2"
   },
   "devDependencies": {
     "postcss": "^8",
