--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase-admin": "^13.0.2",
     "googleapis": "^144.0.0",
     "next": "15.1.2",
+    "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
     "papaparse": "^5.5.2",
     "puppeteer": "^24.1.0",
