--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "googleapis": "^144.0.0",
+    "gsap": "^3.12.7",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
