--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.50",
-    "@mysten/sui": "^1.22.0",
+    "@mysten/sui": "^1.24.0",
     "@mysten/sui.js": "^0.54.1",
     "@mysten/zklogin": "^0.8.1",
     "@sparticuz/chromium": "^132.0.0",
@@ -19,12 +19,15 @@
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "axios": "^1.8.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
     "googleapis": "^144.0.0",
     "gsap": "^3.12.7",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.479.0",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
