--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase-admin": "^13.0.2",
     "googleapis": "^144.0.0",
     "gsap": "^3.12.7",
+    "iron-session": "^8.0.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
     "next": "15.1.2",
