--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "yarn": "^1.22.22"
   },
   "devDependencies": {
+    "next-sitemap": "^4.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   },
