--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.50",
+    "@mysten/enoki": "^0.5.2",
     "@mysten/sui": "^1.24.0",
     "@mysten/sui.js": "^0.54.1",
     "@mysten/zklogin": "^0.8.1",
